@@ -1,3 +1,8 @@
+<b>2011-06-09</b>
+
+* Add exports to GCMap (courtesy of Andrew Chen)
+* Add "Class by distance" pie chart to stats
+
 <b>2011-04-25</b>
 
 * Add /query/X URLs for direct access to airport, airline route maps
